# CentaurAPI

./: .gitignore  .replit  cdn.py  main.py  pyproject.toml  ratelimiter.py  requirements.txt  utils.py
data/accounts/: accounts.sqlite
data/pokemon/: pokemon.sqlite
endpoints/: __init__.py  accounts.py  cats.py  pokemon.py
endpoints/pokemon/: __init__.py  abilities.py  moves.py  types.py
static/: index.css
templates/: index.html  logged_out.html  privacy_policy.html  profile.html  signup.html
