[tool.poetry]
name = "Centaur API"
version = "1.1.1"
description = ""
authors = ["UnrealFar <unrealreply@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
aiohttp = "^3.8.1"
aiosqlite = "^0.17.0"
quart = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"